--- a/HPdemo/index.html
+++ b/HPdemo/index.html
@@ -50,39 +50,34 @@ input {position: absolute; display: none}
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
-      <!-- <button slot="ar-button" id="ar-button" >
-          View in your space
-      </button> -->
+      <button id="hotspot" >
+          collect
+      </button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
     </model-viewer>  
     <script src="script.js"></script>
     <script>
-      const modelViewerVariants = document.querySelector("model-viewer#chair");
-      const modelViewer = document.querySelector('#chair');
-      document.getElementById('color-controls').style.display = 'none';
-      document.getElementById('qr-image').style.display = 'none';
-      var timer;
-  
-      var modal = document.getElementById("myModal");
-  
+     hotspot.addEventListener('click', () => {
+      location.href='https://www.triip.me/'
+});
   
       // Get the image and insert it inside the modal - use its "alt" text as a caption
-      var img = document.getElementById("myImg");
-      var modalImg = document.getElementById("img01");
-      img.onclick = function(){
-      modal.style.display = "block";
-      modalImg.src = "https://cdn.glitch.com/86f43516-6172-4a58-b9a2-46c74478d5a7%2Fqr-code.png?v=1626090973247";
-    }
+      // var img = document.getElementById("myImg");
+      // var modalImg = document.getElementById("img01");
+      // img.onclick = function(){
+      // modal.style.display = "block";
+      // modalImg.src = "https://cdn.glitch.com/86f43516-6172-4a58-b9a2-46c74478d5a7%2Fqr-code.png?v=1626090973247";
+   // }
   
   // Get the <span> element that closes the modal
-  var span = document.getElementsByClassName("close")[0];
+  // var span = document.getElementsByClassName("close")[0];
   
-  // When the user clicks on <span> (x), close the modal
-  span.onclick = function() {
-    modal.style.display = "none";
-  }
+  // // When the user clicks on <span> (x), close the modal
+  // span.onclick = function() {
+  //   modal.style.display = "none";
+  // }
   
   
   
@@ -96,22 +91,16 @@ input {position: absolute; display: none}
             document.getElementById('color-controls').style.display = 'none'; }, 4000);
       }
   
-       modelViewerVariants.addEventListener('load', () => {
-         document.getElementById('color-controls').style.display = '';
-         if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-           //Nothing
-         }else{
-           document.getElementById('qr-image').style.display = '';
-         }
+      //  modelViewerVariants.addEventListener('load', () => {
+      //    document.getElementById('color-controls').style.display = '';
+      //    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      //      //Nothing
+      //    }else{
+      //      document.getElementById('qr-image').style.display = '';
+      //    }
   
-  });
-  hotspot.addEventListener('click', () => {
-  if (modelViewer.paused) {
-    modelViewer.play();
-  } else {
-    modelViewer.pause();
-  }
-});
+  //});
+  H
   
     </script>
     <!-- Loads <model-viewer> for browsers: -->
