--- a/HPdemo/index.html
+++ b/HPdemo/index.html
@@ -44,22 +44,20 @@ input {position: absolute; display: none}
       auto-rotate ar
       ar-modes="webxr">
       
-      <button class="Hotspot" slot="hotspot-1" data-position="0.003m 0.08578798754578425m -0.0038256460048888463m" data-normal="0.005282201301281153m 0.4650571310068707m 0.8852649113395782m" data-visibility-attribute="visible">
+      <button id="Hotspot" slot="hotspot-1" data-position="0.003m 0.08578798754578425m -0.0038256460048888463m" data-normal="0.005282201301281153m 0.4650571310068707m 0.8852649113395782m" data-visibility-attribute="visible">
           <div class="HotspotAnnotation">Get Item</div>
       </button>
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
-      <button id="hotspot" >
-          collect
-      </button>
+     
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
     </model-viewer>  
     <script src="script.js"></script>
     <script>
-     hotspot.addEventListener('click', () => {
+     Hotspot.addEventListener('click', () => {
       location.href='https://www.triip.me/'
 });
   
