--- a/HPdemo/index.html
+++ b/HPdemo/index.html
@@ -50,7 +50,9 @@ input {position: absolute; display: none}
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
-     
+     <button slot="ar-button" id="ar-button" >
+          Get item in your place
+      </button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
