--- a/HPdemo/index.html
+++ b/HPdemo/index.html
@@ -51,7 +51,7 @@ input {position: absolute; display: none}
           <div class="update-bar"></div>
       </div>
      <button slot="ar-button" id="ar-button" >
-          Get item in your place
+          Get it in your place
       </button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
