edit model nuenAR

--- a/NuenViewer/index.html
+++ b/NuenViewer/index.html
@@ -152,9 +152,11 @@ input {position: absolute; display: none}
         <!-- </div>
       </label>
     </div> -->
+    <!-- src="https://cdn.glitch.global/98d6b349-7a65-4678-b739-69665aaf728a/NUEN.glb?v=1651848172454" -->
+
     <!-- <model-viewer> HTML element -->
       <model-viewer id="DucatiAR"
-      src="https://cdn.glitch.global/98d6b349-7a65-4678-b739-69665aaf728a/NUEN.glb?v=1651848172454"
+      src="./dilson.glb"
 
       poster="https://cdn.glitch.com/86f43516-6172-4a58-b9a2-46c74478d5a7%2Fchair2.png?v=1625228915752"
       alt="A Chair"
