change model size

--- a/NuenViewer/index.html
+++ b/NuenViewer/index.html
@@ -156,7 +156,7 @@ input {position: absolute; display: none}
 
     <!-- <model-viewer> HTML element -->
       <model-viewer id="DucatiAR"
-      src="./dilson.glb"
+      src="./house-47mb.glb"
 
       poster="https://cdn.glitch.com/86f43516-6172-4a58-b9a2-46c74478d5a7%2Fchair2.png?v=1625228915752"
       alt="A Chair"
