update occlusion property

--- a/chair.html
+++ b/chair.html
@@ -13,9 +13,10 @@
         <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
 
         <model-viewer id="menu" shadow-intensity="0" shadow-softness="1"
-            src="https://cdn.glitch.com/b06033cd-83d1-40e4-a18c-54cd054132b0%2Fcheri_chair.glb?v=1621247155240disable_occlusion=true" ar
+            src="https://cdn.glitch.com/b06033cd-83d1-40e4-a18c-54cd054132b0%2Fcheri_chair.glb?v=1621247155240" ar
             ar-modes="webxr scene-viewer quick-look" quick-look-browsers="safari chrome"
             camera-controls camera-orbit="41.24deg 77.1deg 1.577m" min-camera-orbit="auto auto auto"
+            dissable_occlusion="true"
             max-camera-orbit="auto auto 1.59m">
 
 
