remove occlusion in link

--- a/chair.html
+++ b/chair.html
@@ -13,7 +13,7 @@
         <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
 
         <model-viewer id="menu" shadow-intensity="0" shadow-softness="1"
-            src="https://cdn.glitch.com/b06033cd-83d1-40e4-a18c-54cd054132b0%2Fcheri_chair.glb?v=1621247155240" ar
+            src="https://cdn.glitch.com/b06033cd-83d1-40e4-a18c-54cd054132b0%2Fcheri_chair.glb?v=1621247155240&disable_occlusion=true" ar
             disable-occlusion="true"
             ar-modes="webxr scene-viewer quick-look" quick-look-browsers="safari chrome"
             camera-controls camera-orbit="41.24deg 77.1deg 1.577m" min-camera-orbit="auto auto auto"
@@ -21,7 +21,7 @@
 
 
 
-            <div class="controls">
+            <!-- <div class="controls">
                 <table>
                     <tbody>
                         <tr>
@@ -42,7 +42,7 @@
                                             value="https://cdn.glitch.global/98d6b349-7a65-4678-b739-69665aaf728a/purple.jpg?v=1652077875855">
                                             Purple</option>          
                                         <!-- <option value="brown.jpeg">brown</option> -->
-                                    </select>
+                                    <!-- </select>
                                 </div>
                             </td>
                             <td>
@@ -57,7 +57,7 @@
                                             Black</option>
 
                                     </select>
-                                </div>
+                                </div> --> -->
                             </td>
                         </tr>
                     </tbody>
