--- a/NuenViewer/index.html
+++ b/NuenViewer/index.html
@@ -81,7 +81,11 @@ input {position: absolute; display: none}
   -webkit-transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
-
+model-viewer {
+  width: 100%;
+  height: 100%;
+  background-color: #020202;
+}
 
     </style>
   </head>
@@ -164,7 +168,7 @@ input {position: absolute; display: none}
       environment-image="neutral"
       camera-controls
       auto-rotate ar
-      ar-modes="webxr scene-viewer quick-look">
+      ar-modes="scene-viewer quick-look">
       
      
       <!-- <button slot="ar-button" id="ar-button" >
