--- a/NuenViewer/index.html
+++ b/NuenViewer/index.html
@@ -84,7 +84,7 @@ input {position: absolute; display: none}
 model-viewer {
   width: 100%;
   height: 100%;
-  background-color: #020202;
+  background-color: #fcfcfc;
 }
 
     </style>
