--- a/NuenViewer/index.html
+++ b/NuenViewer/index.html
@@ -169,7 +169,9 @@ model-viewer {
       camera-controls
       auto-rotate ar
       ar-modes="scene-viewer quick-look">
-      
+      <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+        👋 Activate AR
+    </button>
      
       <!-- <button slot="ar-button" id="ar-button" >
           View in your space
