--- a/NuenViewer/index.html
+++ b/NuenViewer/index.html
@@ -168,7 +168,7 @@ model-viewer {
       environment-image="neutral"
       camera-controls
       auto-rotate ar
-      ar-modes="scene-viewer quick-look">
+      ar-modes="webXR scene-viewer quick-look">
       <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
         👋 Activate AR
     </button>
