--- a/QuestionAR/index.html
+++ b/QuestionAR/index.html
@@ -86,7 +86,7 @@
   <body>
     <div id="scanning" class="hidden">
       <div class="inner">
-	<img src="./assets/targets/Marker.PNG"/>
+	<img src="./assets/QuestionAR//vita.jpg"/>
 	<div class="scanline"></div>
       </div>
     </div>
