--- a/VideoARdemo/index.html
+++ b/VideoARdemo/index.html
@@ -86,7 +86,7 @@
   <body>
     <div id="scanning" class="hidden">
       <div class="inner">
-	<img src="./assets/VideoAR//vita.jpg"/>
+	<img src="./assets/QuestionAR//vita.jpg"/>
 	<div class="scanline"></div>
       </div>
     </div>
