--- a/HandTracking/index.html
+++ b/HandTracking/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-language" content="en-EN" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>3D OBJECT MANIPULATION WITH EFFECT - GHOST</title>
+    <title>Wish you a merry christmas & happy new year</title>
     
     <!-- INCLUDE WEBARROCKSHAND SCRIPT -->
     <script src="dist/WebARRocksHand.js"></script>
