--- a/FootTracking/index.html
+++ b/FootTracking/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-language" content="en-EN" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>BAREFOOT VTO</title>
+    <title>Shoes try on</title>
     
     <!-- INCLUDE WEBARROCKSHAND SCRIPT -->
     <script src="dist/WebARRocksHand.js"></script>
