--- a/webShopping/item.html
+++ b/webShopping/item.html
@@ -15,7 +15,7 @@
   <body>
     <!-- <model-viewer> HTML element -->
     <model-viewer bounds="tight" src="assets/bmw-s1000.glb"
-     ar ar-modes="webxr scene-viewer quick-look" 
+     ar ar-modes="scene-viewer quick-look" 
      camera-controls
       environment-image="neutral" 
       shadow-intensity="1">
