update file json

--- a/webShopping/test.html
+++ b/webShopping/test.html
@@ -182,8 +182,10 @@
               
                 <model-viewer src=${modelSource}
                 alt="A 3D model of a chair" 
-                    poster=${imageSource} reveal="manual"
-                    ar ar-modes="scene-viewer quick-look" environment-image="neutral"
+                    poster=${imageSource}
+                     reveal="manual"
+                    ar ar-modes="scene-viewer quick-look" 
+                    environment-image="neutral"
 
                     camera-controls>
                     
