add new asset item

--- a/webShopping/item.html
+++ b/webShopping/item.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer bounds="tight" src="assets/bmw-s1000.glb"
+    <model-viewer bounds="tight" src="assets/dog.glb"
      ar ar-modes="scene-viewer quick-look" 
      camera-controls
       environment-image="neutral" 
