--- a/realeaste/index.html
+++ b/realeaste/index.html
@@ -145,7 +145,7 @@
 
     <div class="container">
        
-            <model-viewer camera-controls camera-orbit="-90deg 45deg 75%" id="reveal" loading="eager" src="Models/Lincoln Unit A_4.glb" ar="" ar-modes="scene-viewer quick-look"  alt="Lincoln SM" auto-rotate-delay="0" ar-scale="auto" camera-controls="" style="width: 100%; height: 600px" exposure="0.5"> <button slot="ar-button" style="background-color: rgb(255, 255, 255); border-radius: 8px; border: 1 px solid black; position: absolute; top: 20px; right: 20px; height: 40px; width: auto;">
+            <model-viewer camera-controls camera-orbit="-90deg 45deg 75%" id="reveal" loading="eager" src="Models/Lincoln Unit A_4.glb" ar="" ar-modes="webxr scene-viewer quick-look"  alt="Lincoln SM" auto-rotate-delay="0" ar-scale="auto" camera-controls="" style="width: 100%; height: 600px" exposure="0.5"> <button slot="ar-button" style="background-color: rgb(255, 255, 255); border-radius: 8px; border: 1 px solid black; position: absolute; top: 20px; right: 20px; height: 40px; width: auto;">
                    👆 <strong>AR CLICK HERE</strong>
               </button>
             </model-viewer>
