--- a/webShopping/item.html
+++ b/webShopping/item.html
@@ -16,7 +16,8 @@
     <!-- <model-viewer> HTML element -->
     <model-viewer
     id="dog"
-    src="assets/dog.glb"
+    src="assets/puppy_dog.glb"
+    ios-src="assets/puppy_dog.usdz"  
      ar ar-modes="scene-viewer quick-look" 
      camera-controls
       environment-image="neutral" 
