change usdz model

--- a/webShopping/item.html
+++ b/webShopping/item.html
@@ -17,7 +17,7 @@
     <model-viewer
     id="dog"
     src="assets/puppy_dog.glb"
-    ios-src="assets/puppy_dog.usdz"  
+    ios-src="assets/usdz_puppy_dog.usdz"  
      ar ar-modes="scene-viewer quick-look" 
      camera-controls
       environment-image="neutral" 
