--- a/webShopping/test.html
+++ b/webShopping/test.html
@@ -162,6 +162,7 @@
             })
             .then(function (data) {
                 appendData(data);
+                GetURLParameter('pid');
             })
             .catch(function (err) {
                 console.log('error: ' + err);
@@ -218,7 +219,20 @@
             
          
         }
-
+        function GetURLParameter(sParam)
+{
+    var sPageURL = window.location.search.substring(1);
+    var sURLVariables = sPageURL.split('&');
+    for (var i = 0; i < sURLVariables.length; i++) 
+    {
+        var sParameterName = sURLVariables[i].split('=');
+        if (sParameterName[0] == sParam) 
+        {
+            return sParameterName[1];
+            console.log(sParam);
+        }
+    }
+}​
   </script>
     <script src="script.js"></script>
 
