change model down size

--- a/ARChangeColor/index.html
+++ b/ARChangeColor/index.html
@@ -17,7 +17,7 @@
     <!-- <model-viewer> HTML element -->
       <model-viewer 
       id="myModel" 
-    src="assets/model.glb"
+    src="assets/111503.glb"
      ar ar-modes="scene-viewer quick-look" 
      camera-controls
       environment-image="neutral" 
