add demo chair change color

--- a/ARChangeColor/index.html
+++ b/ARChangeColor/index.html
@@ -16,9 +16,9 @@
     <!-- <model-viewer> HTML element -->
       <model-viewer 
       id="my-model" 
-    src="assets/bus2 1k.glb"
+    src="assets/ghe may.glb"
      ar 
-     ar-modes="scene-viewer quick-look" 
+     ar-modes="webxr scene-viewer quick-look" 
      camera-controls
       environment-image="neutral" 
     
