--- a/chair.html
+++ b/chair.html
@@ -21,7 +21,7 @@
 
 
 
-            <!-- <div class="controls">
+            <div class="controls">
                 <table>
                     <tbody>
                         <tr>
@@ -57,7 +57,7 @@
                                             Black</option>
 
                                     </select>
-                                </div> --> -->
+                                </div> -->
                             </td>
                         </tr>
                     </tbody>
