change color selection

--- a/ChairChangeColor/index.html
+++ b/ChairChangeColor/index.html
@@ -274,21 +274,19 @@ input#toggle2:checked ~ #show-menu .btn .closeBtn {
         <div class="btn"  onclick="changemat('Blue')" style="background-color:lightblue;">
           <!-- <i class="material-icons md-36">photo_camera</i> -->
         </div>
-        <div class="btn"  onclick="changemat('Orange')" style="background-color:lightsalmon;">
-          <!-- <i class="material-icons md-36">photo</i> -->
-        </div>
-        <div class="btn"  onclick="changemat('Orange Dark')" style="background-color:orangered">
-          <!-- <i class="material-icons md-36">music_note</i> -->
-        </div>
         <div class="btn"  onclick="changemat('Yellow')" style="background-color:palegreen;">
           <!-- <i class="material-icons md-36">chat_bubble</i> -->
         </div>
+       
+        <div class="btn"  onclick="changemat('Orange Dark')" style="background-color:orangered">
+          <!-- <i class="material-icons md-36">music_note</i> -->
+        </div>
+         <!-- <div class="btn"  onclick="changemat('Orange')" style="background-color:lightsalmon;">
+        </div>
         <div class="btn"  onclick="changemat('Green')" style="background-color:green;">
-          <!-- <i class="material-icons md-36">settings</i> -->
         </div>
         <div class="btn"  onclick="changemat('Grey')" style="background-color: black">
-          <!-- <i class="material-icons md-36">phone</i> -->
-        </div>
+        </div> -->
        
       </label>
     </div>
